[tool.poetry]
name = "eo-data-stac-streamlit"
version = "0.1.0"
description = "A Streamlit interface for STAC-based EO data exploration"
authors = ["ediakatos <ediakatos@mapaction.org>"]
license = "GPL-3.0-only"
readme = "README.md"
package-mode = true

[[tool.poetry.packages]]
include = "streamlit"
from = "src"

[tool.poetry.dependencies]
python = "^3.10"
pystac-client = "^0.8.6"
planetary-computer = "^1.0.0"
geopandas = "^1.0.1"
numpy = "<2.0"
streamlit = "^1.44.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pymarkdownlnt = "^0.9.23"
pytest = "^8.3.3"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
fix = true
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D", "S101", "ANN201", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"
